Spacing and margin

--- a/MauiApp1/MainPage.xaml
+++ b/MauiApp1/MainPage.xaml
@@ -5,11 +5,14 @@
              BackgroundColor="{DynamicResource Background}">
 
     <ScrollView>
-        <VerticalStackLayout>
+        <VerticalStackLayout
+               Padding="30,0"
+               Spacing="25">
             <Image Source="logo.png" 
                HorizontalOptions="Center" 
                VerticalOptions="CenterAndExpand"
                WidthRequest="500" HeightRequest="250"/>
+            
 
             <Label
                 Text="Unge DK"
