--- a/MauiApp1/FavoritesPage.xaml
+++ b/MauiApp1/FavoritesPage.xaml
@@ -33,7 +33,7 @@
                                 <Label Text="{Binding CompanyAndGeography}" 
                                        FontSize="14" 
                                        TextColor="{DynamicResource Text}" />
-                                <Button Text="Remove"
+                                <Button Text="Fjern"
                                         Clicked="OnRemoveFavoriteClicked"
                                         CommandParameter="{Binding .}" />
                             </StackLayout>
