Change color in favorite page, nav bar and back arrow

--- a/MauiApp1/FavoritesPage.xaml
+++ b/MauiApp1/FavoritesPage.xaml
@@ -50,6 +50,9 @@
                                 <Button Text="Fjern"
                                         Clicked="OnRemoveFavoriteClicked"
                                         CommandParameter="{Binding}"
+                                        BorderColor="{DynamicResource FrameBorderColor}"
+                                        BackgroundColor="{DynamicResource FrameBackgroundColor}"
+                                        TextColor="{DynamicResource Text}"
                                         HorizontalOptions="End" />
                             </StackLayout>
                         </Frame>
