--- a/MauiApp1/JobDetailsPage.xaml
+++ b/MauiApp1/JobDetailsPage.xaml
@@ -95,10 +95,9 @@
                 Margin="0,50,0,0" 
                 TextColor="{DynamicResource Text}" />
 
-            <Label Text="{Binding Content}"
-                   TextType="Html"
-                   Margin="0,10,0,0"
-                   FontSize="16"
+            <Label Text="{Binding Content}" 
+                   LineBreakMode="WordWrap" 
+                   FontSize="16" 
                    TextColor="{DynamicResource Text}" />
 
             <Button Text="Ansøg"
